# FdiTools_Python

./: .gitignore  LICENSE  README.md  README_JP.md  README_python.md  pyproject.toml
Examples/: _data.py  step1_excitation_design.py  step2_nonparametric_frf.py  tutorial_1_qlog.py  tutorial_1_random.py  tutorial_2_iterative.py  tutorial_3_nonlinear_in.py  tutorial_3_nonlinear_out.py  tutorial_qlog.py
Examples/private/: convert_ident_to_python.m
MATLAB/: CITATION.cff  Contents.m  README.md
MATLAB/Examples/: Step_2_NonparametricFRF.m  Step_3_NonparametricFRF_LPM_positioning.m  Step_3_NonparametricFRF_LPM_thermal.m  Step_4_NonlinearDistortions.m  Step_5_ParametricEstimation.m  Step_6_SelectionValidation.m  Step_MIMO1_ExcitationDesign.m  Step_MIMO2_NonparametricFRF.m  Step_MIMO3_NonparametricFRF_LPM_positioning.m  Step_MIMO4_NonlinearDistortions.m  Step_MIMO5_ParametricEstimation.m  Step_MIMO6_SelectionValidation.m  Tutorial_1_chirp.m  Tutorial_1_qlog.m  Tutorial_1_random.m  Tutorial_2_iterative.m  Tutorial_3_nonlinear_in.m  Tutorial_3_nonlinear_out.m  Tutorial_4_MIMO.m  export_all_figs.m  lpm_explained.m  mimobench.m  (+1 more)
examples/: _data.py  _plot.py  step2_nonparametric_frf.py  step3_nonlinear_distortions.py  step4_parametric_estimation.py  step5_selection_validation.py  tutorial_1_chirp.py  tutorial_1_qlog.py  tutorial_1_random.py  tutorial_2_iterative.py  tutorial_4_mimo.py  tutorial_lpm.py
fditools/: __init__.py  frfdata.py
tests/: conftest.py  test_aux.py  test_excitation.py  test_nonlinear.py  test_nonparametric.py  test_parametric.py  test_validation.py
(+62 files in other folders)
